# volley-app

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  beosend_architecture.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env  Cargo.toml  Rocket.toml
backend/migrations/: 20231027120000_create_users_table.down.sql  20231027120000_create_users_table.up.sql  20231027120001_create_locations_table.down.sql  20231027120001_create_locations_table.up.sql  20231027120002_create_events_table.down.sql  20231027120002_create_events_table.up.sql  20231027120003_create_event_timers_table.down.sql  20231027120003_create_event_timers_table.up.sql  seed.sql
backend/src/: cors.rs  main.rs
backend/src/api/: auth.rs  beosand.rs  mod.rs  user.rs
backend/src/application/use_cases/: admin.rs  auth.rs  event.rs  event_timer.rs  location.rs  mod.rs  user.rs
backend/src/domain/: mod.rs
backend/src/domain/models/: event.rs  event_timer.rs  location.rs  mod.rs  subscription.rs  user.rs
backend/src/domain/validators/: mod.rs
backend/src/dto/: mod.rs
backend/src/dto/request/: mod.rs  user.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/persistence/: db.rs  mod.rs
backend/src/infrastructure/persistence/repositories/: event_repository.rs  event_timer_repository.rs  location_repository.rs  mod.rs  user_repository.rs
backend/src/models/: event.rs  event_timer.rs  location.rs  mod.rs  user.rs
backend/src/persistence/: db.rs  mod.rs
backend/src/persistence/repository/: event_repository.rs  location_repository.rs  mod.rs  user_repository.rs
backend/src/presentation/: mod.rs
backend/src/presentation/api/: admin.rs  auth.rs  events.rs  files.rs  locations.rs  mod.rs  users.rs
backend/src/presentation/dto/: auth.rs  event.rs  location.rs  mod.rs  user.rs
backend/src/presentation/middleware/: auth.rs  cors.rs  mod.rs
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss  themes.scss
(+143 files in other folders)
