[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
mongodb = "2.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
regex = "1.10"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["mongodb"]
