[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "json", "chrono", "uuid" ] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
futures = "0.3"
regex = "1.10"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
